--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,16 @@ services:
       - ./data:/var/lib/postgresql/data
     ports:
       - 5432:5432
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    restart: always
+    ports:
+      - 80:80
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=user@domain.com
+      - PGADMIN_DEFAULT_PASSWORD=123
+    volumes:
+      - ./pgadmin:/var/lib/pgadmin
+    
