--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     environment:
       - PGADMIN_DEFAULT_EMAIL=user@domain.com
       - PGADMIN_DEFAULT_PASSWORD=123
+      - PGADMIN_CONFIG_ENABLE_PSQL=True
     volumes:
       - ./pgadmin:/var/lib/pgadmin
     
