--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - POSTGRES_PASSWORD=123
     volumes:
       - db-data:/var/lib/postgresql/data
+      - ./data:/home/postgres
     ports:
       - 5432:5432
 
